# Graph-Calculator

./: =  Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  DiGraph.cpp  DiGraph.h  Exceptions.cpp  Exceptions.h  Gcalc.cpp  Gcalc.h  GraphParser.cpp  GraphParser.h  IOManager.cpp  IOManager.h  Makefile  PythonInterface.cpp  PythonInterface.h  broken_mistake_in_vertex_name_length.gc  broken_too_many_edges.gc  broken_too_many_vertices.gc  graph.i  graph_extra_edges.gc  graph_illegal_vertex_name.gc  graph_illegal_vertex_name_in_edge_1.gc  graph_illegal_vertex_name_in_edge_2.gc  graph_self_loop.gc  graph_wrong_edge_vertex_length_2.gc  graph_wrong_vertex_length.gc  hi.gc  input.txt  load  file  name  te m p.gc  temp  o  tes)([]{}_in    copy.t)t  tes)([]{}_in    copy.t)t.out  test__1.gc  test_in.txt  test_out.txt  wrong.gc
Tests/2.2&2.5/interactive/: t1out.txt  t2out.txt
Tests/4.4/: gcalc  graph.py  graph_wrap.c
graph_files/: broken_edge_appears_twice.gc  broken_mistake_in_edge_name.gc  broken_mistake_in_edge_name_length.gc  broken_too_few_edges.gc  broken_too_few_vertices.gc  g2.gc  graph.gc  graph_extra_vertices.gc  graph_illegal_semicolon.gc  graph_same_vertex.gc  graph_too_long.gc  graph_unmatched_parentheses.gc  graph_vertex_not_exist.gc  graph_wrong_edge_vertex_data_1.gc  graph_wrong_edge_vertex_data_2.gc  graph_wrong_edge_vertex_length_1.gc  graph_wrong_edges_count.gc  graph_wrong_vertex_data.gc  shai  shai.gc  temp.gc
